--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>2.7.2</version>
     </dependency>
+
   </dependencies>
+
 </project>
